--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15"
   },
