--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "chinese-lunar-calendar": "^1.0.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
