--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vue-draggable-plus": "^0.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
