--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qinghe-guide-v3",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,8 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.6.7",
     "chinese-lunar-calendar": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "pinia": "^2.1.7",
